--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SpeakPrep - Privacy Policy & Terms</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Title -->
+    <title>SpeakPrep - Privacy Policy & Terms</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="SpeakPrep - Privacy Policy">
+    <meta name="description" content="SpeakPrep is a speaking practice app. Read our privacy policy and terms to understand how we collect, use, and protect your data.">
+    <meta name="keywords" content="SpeakPrep, Privacy Policy, Terms, Speaking App, Communication, AI Learning">
+    <meta name="author" content="SpeakPrep">
+
+    <!-- Open Graph (for sharing link preview) -->
+    <meta property="og:title" content="SpeakPrep - Privacy Policy">
+    <meta property="og:description" content="Official privacy policy and terms for SpeakPrep app.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:image" content="https://yourdomain.com/favicon.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SpeakPrep - Privacy Policy">
+    <meta name="twitter:description" content="Official privacy policy and terms for SpeakPrep app.">
+    <meta name="twitter:image" content="https://yourdomain.com/favicon.png">
+
+    <!-- Theme color (for mobile browser) -->
+    <meta name="theme-color" content="#007bff">
 <style>
     body {
         font-family: Arial, sans-serif;
