--- a/index.html
+++ b/index.html
@@ -2,79 +2,56 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Title -->
-    <title>SpeakPrep - Privacy Policy & Terms</title>
+<title>SpeakPrep - Privacy Policy & Terms</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="favicon.png">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="logo.png">
+<link rel="apple-touch-icon" href="logo.png">
 
-    <!-- SEO Meta Tags -->
-    <meta name="title" content="SpeakPrep - Privacy Policy">
-    <meta name="description" content="SpeakPrep is a speaking practice app. Read our privacy policy and terms to understand how we collect, use, and protect your data.">
-    <meta name="keywords" content="SpeakPrep, Privacy Policy, Terms, Speaking App, Communication, AI Learning">
-    <meta name="author" content="SpeakPrep">
+<!-- SEO -->
+<meta name="title" content="SpeakPrep - Privacy Policy">
+<meta name="description" content="SpeakPrep is a speaking practice app. Read our privacy policy and terms to understand how we collect, use, and protect your data.">
+<meta name="keywords" content="SpeakPrep, Privacy Policy, Terms, Speaking App, Communication, AI Learning">
+<meta name="author" content="SpeakPrep">
 
-    <!-- Open Graph (for sharing link preview) -->
-    <meta property="og:title" content="SpeakPrep - Privacy Policy">
-    <meta property="og:description" content="Official privacy policy and terms for SpeakPrep app.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com">
-    <meta property="og:image" content="https://yourdomain.com/favicon.png">
+<!-- Open Graph -->
+<meta property="og:title" content="SpeakPrep - Privacy Policy">
+<meta property="og:description" content="Official privacy policy and terms for SpeakPrep app.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://speakprep-privacypolicy.vercel.app/">
+<meta property="og:image" content="https://speakprep-privacypolicy.vercel.app/logo.png">
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="SpeakPrep - Privacy Policy">
-    <meta name="twitter:description" content="Official privacy policy and terms for SpeakPrep app.">
-    <meta name="twitter:image" content="https://yourdomain.com/favicon.png">
+<!-- Theme -->
+<meta name="theme-color" content="#007bff">
 
-    <!-- Theme color (for mobile browser) -->
-    <meta name="theme-color" content="#007bff">
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background: #f5f7fa;
-        color: #333;
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 40px auto;
-        background: #fff;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-
-    h1, h2 {
-        color: #2c3e50;
-    }
-
-    h1 {
-        text-align: center;
-    }
-
-    p {
-        line-height: 1.6;
-    }
-
-    ul {
-        margin-left: 20px;
-    }
-
-    .section {
-        margin-bottom: 25px;
-    }
-
-    footer {
-        text-align: center;
-        margin-top: 20px;
-        font-size: 14px;
-        color: #777;
-    }
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background: #f5f7fa;
+    color: #333;
+}
+.container {
+    max-width: 900px;
+    margin: 40px auto;
+    background: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+h1, h2 { color: #2c3e50; }
+h1 { text-align: center; }
+p { line-height: 1.6; }
+ul { margin-left: 20px; }
+.section { margin-bottom: 25px; }
+footer {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 14px;
+    color: #777;
+}
 </style>
 </head>
 
@@ -83,7 +60,7 @@
 <div class="container">
 
 <h1>SpeakPrep - Privacy Policy & Terms</h1>
-<p><strong>Last Updated:</strong> January 2026</p>
+<p><strong>Last Updated:</strong> February 2026</p>
 
 <!-- INTRO -->
 <div class="section">
@@ -94,11 +71,11 @@
 <!-- DATA COLLECTION -->
 <div class="section">
 <h2>2. Information We Collect</h2>
-<p>We may collect the following types of information:</p>
 <ul>
 <li><strong>Personal Information:</strong> Name, email address (if login is used)</li>
 <li><strong>Audio Data:</strong> Voice recordings for speaking practice</li>
-<li><strong>Usage Data:</strong> App interactions, performance data</li>
+<li><strong>Video Data:</strong> Video may be recorded, but only audio is extracted. Video is not stored.</li>
+<li><strong>Usage Data:</strong> App interactions and performance data</li>
 <li><strong>Device Information:</strong> Device type, OS version</li>
 </ul>
 </div>
@@ -108,94 +85,103 @@
 <h2>3. How We Use Your Data</h2>
 <ul>
 <li>To provide speaking practice features</li>
+<li>To process and analyze audio recordings</li>
 <li>To improve app performance and user experience</li>
-<li>To analyze usage and fix bugs</li>
-<li>To personalize user experience</li>
+<li>To fix bugs and enhance features</li>
 </ul>
 </div>
 
 <!-- MICROPHONE -->
 <div class="section">
 <h2>4. Microphone Permission</h2>
-<p>SpeakPrep requires access to your device microphone to record your speech for practice and analysis. Audio recordings are used only for app functionality and are not shared without your consent.</p>
+<p>SpeakPrep requires microphone access to record your speech for practice and analysis. Audio data is used only for app functionality and is not sold or misused.</p>
+</div>
+
+<!-- VIDEO -->
+<div class="section">
+<h2>5. Audio & Video Usage</h2>
+<p>SpeakPrep may allow video recording for speaking practice. However, only audio is extracted for analysis. Video content is not stored, shared, or processed beyond extracting audio.</p>
+</div>
+
+<!-- NOTIFICATIONS -->
+<div class="section">
+<h2>6. Notifications</h2>
+<p>SpeakPrep may send notifications such as reminders, updates, and practice suggestions. You can disable notifications anytime in your device settings.</p>
 </div>
 
 <!-- DATA SHARING -->
 <div class="section">
-<h2>5. Data Sharing</h2>
-<p>We do not sell your personal data. We may share data with trusted third-party services for:</p>
+<h2>7. Data Sharing</h2>
+<p>We do not sell your personal data. We may share data with trusted third-party services such as:</p>
 <ul>
-<li>Analytics</li>
-<li>App performance monitoring</li>
+<li>Analytics services</li>
+<li>Advertising services (e.g., Google AdMob)</li>
 </ul>
 </div>
 
-<!-- DATA SECURITY -->
+<!-- SECURITY -->
 <div class="section">
-<h2>6. Data Security</h2>
+<h2>8. Data Security</h2>
 <p>We use reasonable security measures to protect your data. However, no system is completely secure.</p>
 </div>
 
 <!-- ACCOUNT DELETION -->
 <div class="section">
-<h2>7. Account Deletion</h2>
+<h2>9. Account Deletion</h2>
 <p>If you create an account, you have the right to delete your account and data.</p>
-
-<p>You can request account deletion by:</p>
 <ul>
-<li>Using the "Delete Account" option inside the app</li>
-<li>Contacting us at: <strong>your-email@example.com</strong></li>
+<li>Use the "Delete Account" option inside the app</li>
+<li>Email us at: <strong>oneserve9@gmail.com</strong></li>
 </ul>
-
-<p>Once requested, your data will be permanently deleted within a reasonable timeframe.</p>
+<p>Your data will be deleted within a reasonable timeframe.</p>
 </div>
 
 <!-- DATA SAFETY -->
 <div class="section">
-<h2>8. Data Safety</h2>
-<p>In accordance with Google Play policies, we declare:</p>
+<h2>10. Data Safety</h2>
 <ul>
-<li>We collect personal data such as email (if login is used)</li>
-<li>We collect audio data for app functionality</li>
-<li>Data is used only for app features and improvement</li>
+<li>We collect email (if login is used)</li>
+<li>We collect audio data for app features</li>
+<li>Video is not stored (only audio is extracted)</li>
 <li>We do not sell user data</li>
 </ul>
 </div>
 
 <!-- PERMISSIONS -->
 <div class="section">
-<h2>9. Permissions</h2>
-<p>SpeakPrep may request the following permissions:</p>
+<h2>11. Permissions</h2>
 <ul>
-<li><strong>Microphone:</strong> For voice practice features</li>
+<li><strong>Microphone:</strong> For recording speech</li>
+<li><strong>Camera:</strong> For optional video recording (audio extraction only)</li>
+<li><strong>Notifications:</strong> To send reminders and updates</li>
 <li><strong>Internet:</strong> For app functionality</li>
 </ul>
-
-<p>We only request permissions necessary for app functionality.</p>
+<p>We only request permissions required for app features.</p>
 </div>
 
 <!-- TERMS -->
 <div class="section">
-<h2>10. Terms & Conditions</h2>
+<h2>12. Terms & Conditions</h2>
 <ul>
 <li>You must use the app only for lawful purposes</li>
-<li>You must not misuse or attempt to hack the app</li>
-<li>All app content is protected by intellectual property laws</li>
+<li>You must not misuse or disrupt the app</li>
+<li>All content is protected by intellectual property laws</li>
 <li>The app is provided "as is" without warranties</li>
 </ul>
 </div>
 
 <!-- CHANGES -->
 <div class="section">
-<h2>11. Changes to Policy</h2>
-<p>We may update this policy from time to time. Continued use of the app means you accept the updated policy.</p>
+<h2>13. Changes to Policy</h2>
+<p>We may update this policy at any time. Continued use of the app means you accept the updated policy.</p>
 </div>
 
 <!-- CONTACT -->
 <div class="section">
-<h2>12. Contact Us</h2>
+<h2>14. Contact Us</h2>
 <p>If you have any questions, contact us at:</p>
-<p><strong>your-email@example.com</strong></p>
+<p><strong>oneserve9@gmail.com</strong></p>
+<p>Website: <strong>https://speakprep-privacypolicy.vercel.app/</strong></p>
 </div>
 
 <footer>
