--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ footer {
 <p>If you create an account, you have the right to delete your account and data.</p>
 <ul>
 <li>Use the "Delete Account" option inside the app</li>
-<li>Email us at: <strong>oneserve9@gmail.com</strong></li>
+<li>Email us at: <strong>speakprep4@gmail.com</strong></li>
 </ul>
 <p>Your data will be deleted within a reasonable timeframe.</p>
 </div>
@@ -180,7 +180,7 @@ footer {
 <div class="section">
 <h2>14. Contact Us</h2>
 <p>If you have any questions, contact us at:</p>
-<p><strong>oneserve9@gmail.com</strong></p>
+<p><strong>speakprep4@gmail.com</strong></p>
 <p>Website: <strong>https://speakprep-privacypolicy.vercel.app/</strong></p>
 </div>
 
